// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout resolveOrigins > should not resolve for node without box 1`] = `
{
  "children": [
    {
      "children": [
        {
          "origin": {},
          "style": {},
          "type": "VIEW",
        },
      ],
      "origin": {},
      "style": {},
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveOrigins > should resolve centered origin by default 1`] = `
{
  "children": [
    {
      "box": {
        "height": 400,
        "left": 100,
        "top": 50,
        "width": 300,
      },
      "origin": {
        "left": 250,
        "top": 250,
      },
      "style": {},
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveOrigins > should resolve origin adjusted by fixed values 1`] = `
{
  "children": [
    {
      "box": {
        "height": 400,
        "left": 100,
        "top": 50,
        "width": 300,
      },
      "origin": {
        "left": 200,
        "top": 100,
      },
      "style": {
        "transformOriginX": 100,
        "transformOriginY": 50,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveOrigins > should resolve origin adjusted by percent values 1`] = `
{
  "children": [
    {
      "box": {
        "height": 400,
        "left": 100,
        "top": 50,
        "width": 300,
      },
      "origin": {
        "left": 160,
        "top": 330,
      },
      "style": {
        "transformOriginX": "20%",
        "transformOriginY": "70%",
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveOrigins > should resolve origins for nested elements 1`] = `
{
  "children": [
    {
      "box": {
        "height": 400,
        "left": 100,
        "top": 50,
        "width": 300,
      },
      "children": [
        {
          "box": {
            "height": 80,
            "left": 10,
            "top": 0,
            "width": 50,
          },
          "origin": {
            "left": 35,
            "top": 40,
          },
          "style": {},
          "type": "VIEW",
        },
      ],
      "origin": {
        "left": 250,
        "top": 250,
      },
      "style": {},
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;
